Now using CORS middleware to avoid rolling my own.

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "repository": "https://github.com/Tapin42/prospector",
   "dependencies": {
+    "cors": "^2.8.1",
     "express": "^4.13.4",
     "request": "^2.72.0"
   },
